Configuracion del contenido

--- a/docker/docker-react/proyectos/pbase/deploy/.env
+++ b/docker/docker-react/proyectos/pbase/deploy/.env
@@ -1,5 +1,5 @@
-CONTEXTO=/home/jiahaolin/megacrossover/docker/megacrossover/
-USUARIO=jiahao
+CONTEXTO=/home/francisco/docker-react/docker/docker-react
+USUARIO=francisco
 PASSWORD=1234
 PORT_SSH=23456
 CONTAINER_NAME=ctUbbase
