--- a/docker/docker-react/proyectos/pnginx/deploy/docker-compose.yml
+++ b/docker/docker-react/proyectos/pnginx/deploy/docker-compose.yml
@@ -11,3 +11,13 @@ services:
     image: francisco/nginx
     volumes:
       - ./logs:/root/logs      
+    networks:
+      netmegacrossovernginx:
+        ipv4_address: ${IP}
+networks:
+  netmegacrossovernginx:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: ${SUBNET}
