--- a/docker/docker-react/proyectos/pnode/deploy/docker-compose.yml
+++ b/docker/docker-react/proyectos/pnode/deploy/docker-compose.yml
@@ -11,4 +11,13 @@ services:
     image: francisco/nodejs
     volumes:
       - ./logs:/root/logs      
-  
+    networks:
+      netwebbasicanode:
+        ipv4_address: ${IP_WEB}
+networks:
+  netwebbasicanode:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: ${SUBNET}
