--- a/docker/docker-react/proyectos/pnginx/deploy/docker-compose.yml
+++ b/docker/docker-react/proyectos/pnginx/deploy/docker-compose.yml
@@ -12,10 +12,10 @@ services:
     volumes:
       - ./logs:/root/logs      
     networks:
-      netmegacrossovernginx:
+      practicanginx:
         ipv4_address: ${IP}
 networks:
-  netmegacrossovernginx:
+  practicanginx:
     driver: bridge
     ipam:
       driver: default
